--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -9,14 +9,14 @@ en:
   #contentDir: content/en
 
 # Uncomment the lines below to configure your website in a second language.
-#zh:
-#  languageCode: zh-Hans
-#  contentDir: content/zh
-#  title: Chinese website title...
+#fr:
+#  languageCode: fr
+#  contentDir: content/fr
+#  title: Portfolio de Dimitri VARRÉ
 #  params:
-#    description: Site description in Chinese...
+#    description: Portfolio de mes compétences et de mes projets
 #  menu:
 #    main:
-#      - name: 传
+#      - name: Français
 #        url: '#about'
 #        weight: 1
