--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,6 +7,16 @@ main:
   - name: Home
     url: /
     weight: 10
-  - name: Resumé
+  - name: Resume
     url: about/
     weight: 20
+  - name: Video games
+    url: videoGames/
+    weight: 30
+  - name: Research
+    url: research/
+    weight: 40
+  - name: ai
+    url: ai/
+    weight: 50
+    
